# 6600033-engineering-43

./: .env.example  .gitignore  package.json
.github/workflows/: ci.yml  release.yml
backend/: pyproject.toml  requirements.txt
frontend/: .eslintignore  .eslintrc.cjs  package.json  vite.config.ts
scripts/: api-check.sh  check-all.sh  dev-all.sh  dev-proxy.sh  release.sh
